--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 .img1{
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
+    transform: translate( 220%, 0%);
 }
 
 .img2{
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 55px;
+    transform: translate( 2400%, 0%);
+}
+
+.modelo{
+    transform: translate( 5%, 0);
+    color: blue;
 }
 
 .formulario{
@@ -53,3 +60,4 @@ form .username{
     font-size: 16px;
     pointer-events: none;
 }
+
