--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,5 @@
 :root{
-    --pink: aqua;
+    --pink: rgb(255, 0, 0);
 }
 
 *{
@@ -10,6 +10,11 @@
     text-decoration: none;
     text-transform: capitalize;
     transition: .2s linear;
+}
+
+.ola{
+    height: 40px;
+    position: end;
 }
 
 html{
@@ -33,7 +38,7 @@ section{
 }
 
 .heading span{
-    color: aqua;
+    color: red;
 }
 
 .btn{
@@ -111,7 +116,7 @@ header .fa-bars{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:URL(img/olo.png) no-repeat;
+    background:URL(img/Broken-Chains-Nike-Air-Force-1-Low-Sun-Club-DM0117-100-05.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -223,9 +228,197 @@ header .fa-bars{
     font-size: 1.3rem;
 }
 
-
 .products .box-containe{
     display: flex;
     flex-wrap: wrap;
-    gap:1.5rem;
+    gap: 1.5rem;
+}
+
+.products .box-containe .box{
+    flex: 1 1 30 rem;
+    box-shadow: 0 .5rem 1.5rem black;
+    border-radius: .5rem;
+    border: .1rem solid black;
+    position: relative;
+}
+
+.products .box-containe .box .discount{
+    position: absolute;
+    top: 1rem; left: 1rem;
+    padding: .7rem 1rem;
+    font-size: 2rem;
+    color: red;
+    background: rgb(232, 229, 229);
+    z-index: 1;
+    border-radius: .5rem;
+}
+
+.products .box-containe .box .image{
+    position: relative;
+    text-align: center;
+    padding-top: 2rem;
+    overflow: hidden;
+}
+
+.products .box-containe .box .image img{
+    height: 25rem;
+}
+
+.products .box-containe .box:hover .image img{
+    transform: scale(1.1);
+}
+
+.products .box-containe .box .image .icons{
+    position: absolute;
+    bottom: -7rem; left: 0; right: 0;
+    display: flex;
+}
+
+.products .box-containe .box:hover .image .icons{
+    bottom: 0;
+}
+
+.products .box-containe .box .image .icons a{
+    height: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    width: 50%;
+    background: red;
+    color: #fff;
+}
+
+.products .box-containe .box .image .icons .cart-btn{
+    border-left: .1rem solid #fff;
+    border-right: .1rem solid #fff;
+    width: 100%;
+}
+
+.products .box-containe .box .image .icons a:hover{
+    background: #333;
+}
+
+.products .box-containe .box .content{
+    padding: 2rem;
+    text-align: center;
+}
+
+.products .box-containe .box .content h3{
+    font-size: 2.5rem;
+    color: #333;
+}
+
+.products .box-containe .box .content .price{
+    font-size: 2.5rem;
+    color: red;
+    font-weight: bolder;
+    padding-top: 1rem;
+}
+
+.products .box-containe .box .content .price span{
+    font-size: 1.5rem;
+    color: #999;
+    font-weight: lighter;
+    text-decoration: line-through;
+}
+
+.review .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.review .box-container .box{
+    flex: 1 1 30rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+    padding: 3rem 2rem;
+    position: relative;
+    border: .1rem solid rgba(0,0,0,.1);
+}
+
+.review .box-container .box .fa-quote-right{
+    position: absolute;
+    bottom: 3rem; right: 3rem;
+    font-size: 6rem;
+    color: #eee;
+}
+
+.review .box-container .box .stars i{
+    color: red;
+    font-size: 2rem;
+}
+
+.review .box-container .box p{
+    color: #999;
+    font-size: 1.5rem;
+    line-height: 1.5;
+    padding-top: 2rem;
+}
+
+.review .box-container .box .user{
+    display: flex;
+    align-items: center;
+    padding-top: 2rem;
+}
+
+.review .box-container .box .user img{
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 1rem;
+}
+
+.review .box-container .box .user h3{
+    font-size: 2rem;
+    color: #333;
+}
+
+.review .box-container .box .user span{
+    font-size: 1.5rem;
+    color: #999;
+}
+
+.contact .row{
+    display: flex;
+    flex-wrap: wrap-reverse;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.contact .row form{
+    flex: 1 1 40rem;
+    padding: 2rem 2.5rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+    border: .1rem solid rgba(0,0,0,.1);
+    background: #fff;
+    border-radius: .5rem;
+}
+
+.contact .row .image{
+    flex: 1 1 40rem;
+}
+
+.contact .row .image img{
+    width: 100%;
+}
+
+.contact .row form .box{
+    padding: 1rem;
+    font-size: 1.7rem;
+    color: #333;
+    text-transform: none;
+    border: .1rem solid rgba(0,0,0,.1);
+    border-radius: .5rem;
+    margin: .7rem 0;
+    width: 100%;
+}
+
+.contact .row form .box:focus{
+    border-color: red;
+}
+
+.contact .row form textarea{
+    height: 15rem;
+    resize: none;
 }
