--- a/style2.css
+++ b/style2.css
@@ -72,6 +72,8 @@ header .logo{
     font-size: 3rem;
     color: #333;
     font-weight: bolder;
+    margin-top: -1%;
+    margin-left: -7%;
 }
 
 header .logo span{
@@ -81,7 +83,7 @@ header .logo span{
 header .navbar a{
     font-size: 2rem;
     padding: 0 1.5rem;
-    color: #666;
+    color: #0a0a0a;
 }
 
 header .navbar a:hover{
@@ -92,9 +94,17 @@ header .navbar a:hover{
     display: flex;
 }
 
+
 .navbar a{
-    line-height: 40px;
+    line-height: 35px;
+    margin-left: 1%;
 }
+
+.navbar .centrar{
+    margin-top: -4%;
+    margin-left: 20%;
+}
+
 
 header .icons a{
     font-size: 2.5rem;
@@ -147,7 +157,7 @@ header .fa-bars{
 
 .home .content p{
     font-size: 1.5rem;
-    color: #999;
+    color: #070707;
     padding: 1rem 0;
     line-height: 1.5;
 }
@@ -170,14 +180,14 @@ header .fa-bars{
     width: 100%;
     border: 1.5rem solid #fff;
     border-radius: .5rem;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    box-shadow: 0 .5rem 1rem rgb(148, 2, 2);
     height: 100%;
     object-fit: cover;
 }
 
 .about .row .video-container h3{
     position: absolute;
-    top: 50%; transform: translateY(-50%);
+    top: 15%; transform: translateY(-50%);
     font-size: 3rem;
     background: #fff;
     padding: 1rem 2rem;
@@ -196,7 +206,7 @@ header .fa-bars{
 
 .about .row .content p{
     font-size: 1.5rem;
-    color: #999;
+    color: #000000;
     padding: 5rem 0;
     padding-top: 1rem;
     line-height: 1.5;
@@ -244,9 +254,9 @@ header .fa-bars{
 
 .products .box-containe .box{
     flex: 1 1 30 rem;
-    box-shadow: 0 .5rem 1.5rem black;
+    box-shadow: 0 .5rem 1.5rem rgb(148, 2, 2);
     border-radius: .5rem;
-    border: .1rem solid black;
+    border: .1rem solid rgb(148, 2, 2);
     position: relative;
 }
 
@@ -255,8 +265,8 @@ header .fa-bars{
     top: 1rem; left: 1rem;
     padding: .7rem 1rem;
     font-size: 2rem;
-    color: red;
-    background: rgb(232, 229, 229);
+    color: black;
+    background: white;
     z-index: 1;
     border-radius: .5rem;
 }
@@ -491,4 +501,51 @@ input:focus{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.footer .box-container .box{
+    flex: 1 1 25rem;
+}
+
+.footer .box-container .box h3{
+    color: #333;
+    font-size: 2.5rem;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box a{
+    display: block;
+    color: #666;
+    font-size: 1.5rem;
+    padding: 1rem 0;
+}
+
+.footer .box-container .box a:hover{
+    color: red;
+    text-decoration: underline;
+}
+
+.footer .box-container .box img{
+    margin-top: 1rem;
+    height: 90px;
+}
+
+.footer .credit{
+    text-align: center;
+    padding: 1.5rem;
+    margin-top: 1.5rem;
+    padding-top: 2.5rem;
+    font-size: 2rem;
+    color: #333;
+    border-top: .1rem solid rgba(0,0,0,.1);
+}
+
+.footer .credit span{
+    color: red;
 }
