--- a/style2.css
+++ b/style2.css
@@ -53,7 +53,7 @@ section{
 }
 
 .btn:hover{
-    background: blue;
+    background: red;
 }
 
 header{
@@ -72,7 +72,7 @@ header .logo{
     font-size: 3rem;
     color: #333;
     font-weight: bolder;
-    margin-top: -1%;
+    margin-top: -2%;
     margin-left: -7%;
 }
 
@@ -98,11 +98,13 @@ header .navbar a:hover{
 .navbar a{
     line-height: 35px;
     margin-left: 1%;
+    margin-top: 1%;
+    flex: none;
 }
 
 .navbar .centrar{
-    margin-top: -4%;
-    margin-left: 20%;
+    margin-top: -3.6%;
+    margin-left: 15%;
 }
 
 
@@ -169,6 +171,14 @@ header .fa-bars{
     flex-wrap: wrap;
     padding: 2rem 0;
     padding-bottom: 3rem;
+}
+
+.about h1 span{
+    color: black;
+}
+
+.about h1{
+    color: red;
 }
 
 .about .row .video-container{
@@ -246,98 +256,136 @@ header .fa-bars{
     font-size: 1.3rem;
 }
 
-.products .box-containe{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.continer{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 3rem 2rem;
 }
 
-.products .box-containe .box{
-    flex: 1 1 30 rem;
-    box-shadow: 0 .5rem 1.5rem rgb(148, 2, 2);
-    border-radius: .5rem;
-    border: .1rem solid rgb(148, 2, 2);
-    position: relative;
-}
-
-.products .box-containe .box .discount{
-    position: absolute;
-    top: 1rem; left: 1rem;
-    padding: .7rem 1rem;
-    font-size: 2rem;
-    color: black;
-    background: white;
-    z-index: 1;
-    border-radius: .5rem;
-}
-
-.products .box-containe .box .image{
-    position: relative;
-    text-align: center;
-    padding-top: 2rem;
-    overflow: hidden;
-}
-
-.products .box-containe .box .image img{
-    height: 25rem;
-}
-
-.products .box-containe .box:hover .image img{
-    transform: scale(1.1);
-}
-
-.products .box-containe .box .image .icons{
-    position: absolute;
-    bottom: -7rem; left: 0; right: 0;
-    display: flex;
-}
-
-.products .box-containe .box:hover .image .icons{
-    bottom: 0;
-}
-
-.products .box-containe .box .image .icons a{
-    height: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
-    width: 50%;
-    background: red;
-    color: #fff;
-}
-
-.products .box-containe .box .image .icons .cart-btn{
-    border-left: .1rem solid #fff;
-    border-right: .1rem solid #fff;
-    width: 100%;
-}
-
-.products .box-containe .box .image .icons a:hover{
-    background: #333;
-}
-
-.products .box-containe .box .content{
-    padding: 2rem;
+.continer .title{
+    font-size: 3.5rem;
+    color: #444;
+    margin-bottom: 3rem;
+    text-transform: uppercase;
     text-align: center;
 }
 
-.products .box-containe .box .content h3{
-    font-size: 2.5rem;
-    color: #333;
+.continer .products-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2rem;
 }
 
-.products .box-containe .box .content .price{
-    font-size: 2.5rem;
-    color: red;
-    font-weight: bolder;
-    padding-top: 1rem;
+.continer .products-container .product{
+    text-align: center;
+    padding: 3rem 2rem;
+    border: #fff;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    outline: .1rem solid #ccc;
+    outline-offset: -1.5rem;
+    cursor: pointer;
 }
 
-.products .box-containe .box .content .price span{
-    font-size: 1.5rem;
+.continer .products-container .product .descuen span{
+    font-size: 2rem;
+    margin-left: 82%;
+}
+
+
+.continer .products-container .product:hover{
+    outline: .2rem solid red;
+    outline-offset: 0;
+}
+
+.continer .products-container .product .price span{
+    font-size: 1.4rem;
     color: #999;
     font-weight: lighter;
-    text-decoration: line-through;
+    text-decoration: line-through;   
 }
+
+
+
+.continer .products-container .product img{
+    height: 21rem;
+}
+
+.continer .products-container .product:hover img{
+    transform: scale(.9);
+}
+
+
+.continer .products-container .product h3{
+    padding: .5rem 0;
+    font-size: 2.5rem;
+    color: #444;
+}
+
+.continer .products-container .product:hover h3{
+    color: rgb(223, 0, 0);
+}
+
+.continer .products-container .product .price{
+    font-size: 2rem;
+    color: #444;
+    margin-left: -66%;
+    margin-top: 10%;
+}
+
+.continer .products-container .product a{
+    font-size: 1.4rem;
+    margin-left: -38%;
+    margin-top: 5%;
+}
+
+.continer .products-container .product h4{
+    font-size: 1.2rem;
+    font-weight: lighter;
+    text-align: start;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .review .box-container{
     display: flex;
