--- a/styleinicio.css
+++ b/styleinicio.css
@@ -18,7 +18,7 @@ body{
     margin-top: 10px;
 }
 
-.info{
+.infoo{
     background-image: url(img/jamback\ \(2\).png);
     background-position: center center;
     background-repeat: no-repeat;
@@ -36,7 +36,7 @@ body{
     margin-top: -33%;
 }
 
-.info h2 {
+.infoo h2 {
     color: red;
     text-decoration: uppercase;
     font-size: 50px;
@@ -44,7 +44,7 @@ body{
     margin-top: -5%;
 }
 
-.info hr {
+.infoo hr {
     width: 55px;
     border: 4px solid rgb(231, 89, 89);
     margin-left: 170px;
@@ -118,3 +118,13 @@ body{
     margin-top: 60%;
     margin-left: -0%;
 }
+
+
+
+
+
+
+
+
+
+  
